--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -3811,6 +3811,25 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
+     <widget class="QPushButton" name="Button_pay">
+      <property name="geometry">
+       <rect>
+        <x>700</x>
+        <y>151</y>
+        <width>121</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+       </font>
+      </property>
+      <property name="text">
+       <string>Список 
+для взносов</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QToolBox" name="toolBox">
